// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive layout visual agreements matches the active docked-core render snapshot 1`] = `
"  Synax v0.0.21-alpha  Tool  0:02

  ※ note       Inspecting files before editing.                                  ┌ Synax Core ──────────────────────┐
                                                                                 │               ˙˙ ˙·              │
  $ bash       exit 0                                                            │         · ··˙╲◆│││◆˙˙˙ ·         │
    command    npm test -- src/__tests__/interactive-tui.test.ts                 │       ˙˙ ╲◆· ╭─────╮˙╱◆··        │
    output     PASS                                                              │       ● ●─● ●│●●●●●│● ◆● ●       │
                                                                                 │       ● ●╱◆●●╰─────╯ ╲◆  ●       │
                                                                                 │         ˙  ˙˙╱◆│││◆· ˙˙          │
                                                                                 │               ·· ··              │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Loaded                │
                                                                                 │Model       qwen-local            │
                                                                                 │Provider    Relay                 │
                                                                                 │Context     —                     │
                                                                                 │[────────────────────────────────]│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       bash                  │
                                                                                 │Steps       —                     │
                                                                                 └──────────────────────────────────┘




╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ continue polishing the feed                                                                                         ║
║                                                                                                                     ║
╚ Enter submit | Ctrl+C exit | /help | !cmd shell ════════════════════════════════════════════════════════════════════╝"
`;

exports[`interactive layout visual agreements matches the blocked budget-exhausted render snapshot 1`] = `
"  Synax v0.0.21-alpha  Budget exhausted  0:00

  No runtime events yet.                                                         ┌ Synax Core ──────────────────────┐
                                                                                 │               .  ×               │
                                                                                 │           ·  ╲│││×╱ ·  .         │
                                                                                 │       ·  ╲×  ╭─────╮.×╱×         │
                                                                                 │       •  •  ×│×•×••│• •─ ×       │
                                                                                 │         •╱•••╰─────╯ •╲  •       │
                                                                                 │         ·  ×╱╱││││╲╲ .           │
                                                                                 │               .  .               │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Unloaded              │
                                                                                 │Model       —                     │
                                                                                 │Provider    —                     │
                                                                                 │Context     —                     │
                                                                                 │[────────────────────────────────]│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       none                  │
                                                                                 │Steps       32/32                 │
                                                                                 └──────────────────────────────────┘





╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                                     ║
╚ Enter submit | Ctrl+C exit | /help | !cmd shell ════════════════════════════════════════════════════════════════════╝"
`;

exports[`interactive layout visual agreements matches the completed render snapshot 1`] = `
"  Synax v0.0.21-alpha  Completed  0:00

  No runtime events yet.                                                         ┌ Synax Core ──────────────────────┐
                                                                                 │               ·  ·               │
                                                                                 │           ··╲╲│· │╱╱.  .         │
                                                                                 │       ·  ╲   ╭─────╮  ╱·         │
                                                                                 │         ─◎  ◎│◎◎◎◎◎│  ◎─ ◎       │
                                                                                 │         ◎╱ ◎◎╰─────╯ ◎╲  ◎       │
                                                                                 │            .╱╱│.  ╲╲ ·           │
                                                                                 │                  ·               │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Unloaded              │
                                                                                 │Model       —                     │
                                                                                 │Provider    —                     │
                                                                                 │Context     —                     │
                                                                                 │[────────────────────────────────]│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       none                  │
                                                                                 │Steps       3                     │
                                                                                 └──────────────────────────────────┘





╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                                     ║
╚ Enter submit | Ctrl+C exit | /help | !cmd shell ════════════════════════════════════════════════════════════════════╝"
`;

exports[`interactive layout visual agreements matches the idle large-core render snapshot 1`] = `
"  Synax v0.0.21-alpha  Idle  0:02

                                ·  .
                            ·   ·  .  .             Runtime
                        ·   ╲╲╲╲· ·   ╱╱╱╱  .       Core        Unloaded
                        ◎◎╲╲  ◎╭───────╮◎  ╱◎  ◎    Model       —
                       ◎──◎   ◎│◎◎◎◎◎◎◎│◎  ◎─ ◎     Provider    —
                      ··─ .  ..│◎◎◎◎◎◎◎│.  ·.─.     Context     —
                      .  ─   . │◎◎◎◎◎◎·│  · ──      [────────────────────────]
                     .   .╱ .  ╰───────╯ ·╲╲ ·  .
                        .  ·╱╱╱╱. .  ·╲╲╲╲  ·       Session
                              .      .  ·           Thinking    —
                                 .  .               Spend       —
                                                    Tools       none
                                                    Steps       —






╔═════════════════════════════════════════════════════════════════════════════╗
║                                                                             ║
╚ Enter submit | Ctrl+C exit | /help | !cmd shell ════════════════════════════╝"
`;

exports[`interactive layout visual agreements matches the narrow terminal fallback snapshot 1`] = `
"  Synax v0.0.21-alpha  Thinking  0:02

  ※ note       Inspecting files before editing.

  ◌ working  waiting for model response…









╔═════════════════════════════════════════════════════╗
║ short task                                          ║
║                                                     ║
╚ Enter submit | Ctrl+C exit | /help | !cmd shell ════╝"
`;
